chapitre 2, en cours

--- a/02-Architectures/biblio.bib
+++ b/02-Architectures/biblio.bib
@@ -539,3 +539,322 @@ question: sur quels données de sortie des cartes apprennent les couches sup ? o
 	pages = {6},
 	file = {Johnsson and Balkenius - Associating SOM Representations of Haptic Submodal.pdf:/home/noemie/Zotero/storage/XH3IP7CJ/Johnsson and Balkenius - Associating SOM Representations of Haptic Submodal.pdf:application/pdf},
 }
+
+@article{primate_cortex_91,
+title={Distributed Hierarchical Processing
+in the Primate Cerebral Cortex},
+author={Daniel J. Felleman and David C. Van Essen},
+year = {1991},
+booktitle={Cerebral Cortex}
+}
+@article{mountcastle_columnar_1997,
+	title = {The columnar organization of the neocortex},
+	volume = {120},
+	issn = {14602156},
+	url = {https://academic.oup.com/brain/article-lookup/doi/10.1093/brain/120.4.701},
+	doi = {10.1093/brain/120.4.701},
+	language = {en},
+	number = {4},
+	urldate = {2021-07-21},
+	journal = {Brain},
+	author = {Mountcastle, V.},
+	month = apr,
+	year = {1997},
+	pages = {701--722},
+	file = {Mountcastle - 1997 - The columnar organization of the neocortex.pdf:/home/noemie/Zotero/storage/YDSLD6ME/Mountcastle - 1997 - The columnar organization of the neocortex.pdf:application/pdf},
+}
+
+@InCollection{binzegger05,
+   author =      {Tom Binzegger and Rodney J. Douglas and Kevan A. C.
+Martin},
+   title =      {Cortical Architecture},
+   booktitle =      {Brain, Vision, and Artifical Intelligence},
+   publisher = {Springer-Verlag},
+   year =      {2005},
+   editor =      {M. {De Gregorio} and V. {Di Maio} and M. Frucci and C.
+Musio}
+}
+
+@article{Meunier2010ModularAH,
+  title={Modular and Hierarchically Modular Organization of Brain Networks},
+  author={D. Meunier and R. Lambiotte and E. Bullmore},
+  journal={Frontiers in Neuroscience},
+  year={2010},
+  volume={4}
+}
+
+
+@inproceedings{lefort_active_2015,
+	title = {Active learning of local predictable representations with artificial curiosity},
+	booktitle = {2015 {Joint} {IEEE} {International} {Conference} on {Development} and {Learning} and {Epigenetic} {Robotics} ({ICDL}-{EpiRob})},
+	author = {Lefort, M. and Gepperth, A.},
+	year = {2015}
+}
+
+
+@inproceedings{johnsson_associative_2009,
+	title = {Associative Self-Organizing Map},
+	author = {M. Johnsson and C. Balkenius and G. Hesslow},
+	year = {2009},
+	booktitle = {Proc. IJCCI}
+	}
+	
+
+@article{Liu2015DeepSM,
+  title={Deep Self-Organizing Map for visual classification},
+  author={N. Liu and Jinjun Wang and Yihong Gong},
+  journal={2015 International Joint Conference on Neural Networks (IJCNN)},
+  year={2015}
+}
+
+@ARTICLE{parisiLL,
+	  
+	AUTHOR={Parisi, German I. and Tani, Jun and Weber, Cornelius and Wermter, Stefan},   
+		 
+	TITLE={Lifelong Learning of Spatiotemporal Representations With Dual-Memory Recurrent Self-Organization},      
+		
+	JOURNAL={Frontiers in Neurorobotics}, 
+		
+	YEAR={2018}
+	}
+	
+@inproceedings{baheux_towards_2014,
+  TITLE = {{Towards an effective multi-map self organizing recurrent neural network}},
+  AUTHOR = {D. Baheux and J. Fix and H. Frezza-Buet},
+  BOOKTITLE = {Proc. ESANN},
+  YEAR = {2014},
+}
+
+
+@article{khouzam,
+  TITLE = {{Distributed recurrent self-organization for tracking the state of non-stationary partially observable dynamical systems}},
+  AUTHOR = {B. Khouzam and H.Frezza-Buet},
+  JOURNAL = {{Biologically Inspired Cognitive Architectures}},
+  YEAR = {2013}
+  }
+
+
+@article{dominey13,
+author = {Lallee, Stephane and Dominey, Peter},
+year = {2013},
+pages = {274--285},
+title = {Multi-modal convergence maps: From body schema and self-representation to mental imagery},
+volume = {21},
+number = {4},
+journal = {Adaptive Behavior},
+}
+
+@inproceedings{ASOM,
+  author       = {Johnsson, Magnus and Balkenius, Christian and Hesslow, Germund},
+  booktitle    = {Proc. IJCCI'09},
+  pages        = {363--370},
+  title        = {Associative Self-Organizing Map},
+  year         = {2009}
+}
+
+@ARTICLE{SOIMA,
+  
+AUTHOR={Escobar-Juárez, Esau and Schillaci, Guido and Hermosillo-Valadez, Jorge and Lara-Guzmán, Bruno},   
+	 
+TITLE={A Self-Organized Internal Models Architecture for Coding Sensory–Motor Schemes},      
+	
+JOURNAL={Frontiers in Robotics and AI},      
+	
+VOLUME={3},      
+	
+YEAR={2016},      
+	  
+URL={https://www.frontiersin.org/article/10.3389/frobt.2016.00022},       
+	
+DOI={10.3389/frobt.2016.00022},      
+	
+ISSN={2296-9144},   
+
+}
+
+
+@article{varsta_temporal_2001,
+	title = {Temporal {Kohonen} {Map} and the {Recurrent} {Self}-{Organizing} {Map}: {Analytical} and {Experimental} {Comparison}},
+	language = {en},
+	author = {Varsta, Markus and Heikkonen, Jukka and Lampinen, Jouko},
+	pages = {15},
+	journal = {neural processing letters},
+	year = {2001}
+}
+
+
+@inproceedings{hammer_self-organizing_2005,
+	title = {Self-{Organizing} {Maps} for {Time} {Series}},
+	language = {en},
+	author = {Hammer, Barbara and Micheli, Alessio and Neubauer, Nicolas and Sperduti, Alessandro and Strickert, Marc},
+	year = {2005},
+	pages = {8},
+	booktitle = {Proc. WSOM'2005}
+}
+
+@incollection{fix20,
+  TITLE = {{Look and Feel What and How Recurrent Self-Organizing Maps Learn}},
+  AUTHOR = {Fix, J{\'e}r{\'e}my and Frezza-Buet, Herv{\'e}},
+  BOOKTITLE = {Proc. WSOM'19},
+  VOLUME = {976},
+  PAGES = {3--12},
+  YEAR = {2020}
+}
+
+@article{hammer_recursive_2004,
+	title = {Recursive self-organizing network models},
+	volume = {17},
+	issn = {08936080},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0893608004001510},
+	doi = {10.1016/j.neunet.2004.06.009},
+	language = {en},
+	number = {8-9},
+	urldate = {2018-11-07},
+	journal = {Neural Networks},
+	author = {Hammer, Barbara and Micheli, Alessio and Sperduti, Alessandro and Strickert, Marc},
+	month = oct,
+	year = {2004},
+	pages = {1061--1085}
+}
+
+@incollection{KOHONEN19911357,
+title = {THE HYPERMAP ARCHITECTURE},
+editor = {Teuvo KOHONEN and Kai MÄKISARA and Olli SIMULA and Jari KANGAS},
+booktitle = {Artificial Neural Networks},
+publisher = {North-Holland},
+address = {Amsterdam},
+pages = {1357-1360},
+year = {1991},
+isbn = {978-0-444-89178-5},
+doi = {https://doi.org/10.1016/B978-0-444-89178-5.50088-9},author = {Teuvo Kohonen}}
+}
+
+@article{Chappell1993TheTK,
+  title={The temporal Koh{\"o}nen map},
+  author={Geoffrey J. Chappell and John G. Taylor},
+  journal={Neural Networks},
+  year={1993},
+  volume={6},
+  pages={441-445}
+}
+
+@article{Voegtlin2002RecursiveSM,
+  title={Recursive self-organizing maps},
+  author={Thomas Voegtlin},
+  journal={Neural networks : the official journal of the International Neural Network Society},
+  year={2002},
+  volume={15 8-9},
+  pages={979-91 }
+}
+
+@article{Strickert2005MergeSF,
+  title={Merge SOM for temporal data},
+  author={Marc Strickert and Barbara Hammer},
+  journal={Neurocomputing},
+  year={2005},
+  volume={64},
+  pages={39-71}
+}
+
+@article{menard05,
+  TITLE = {{Model of multi-modal cortical processing: Coherent learning in self-organizing modules}},
+  AUTHOR = {M{\'e}nard, Olivier and Frezza-Buet, Herv{\'e}},
+  JOURNAL = {{Neural Networks}},
+  PUBLISHER = {{Elsevier}},
+  VOLUME = {18},
+  NUMBER = {5-6},
+  PAGES = {646--655},
+  YEAR = {2005}
+}
+
+
+@article{damasio_time-locked_1989,
+	title = {Time-locked multiregional retroactivation: {A} systems-level proposal for the neural substrates of recall and recognition},
+	volume = {33},
+	issn = {0010-0277},
+	url = {https://www.sciencedirect.com/science/article/pii/001002778990005X},
+	doi = {https://doi.org/10.1016/0010-0277(89)90005-X},
+	
+	number = {1},
+	journal = {Cognition},
+	author = {Damasio, Antonio R.},
+	year = {1989},
+	pages = {25--62},
+	annote = {Special Issue Neurobiology of Cognition},
+}
+
+@inproceedings{Edelman1982GroupSA,
+  title={Group selection and phasic reentrant signaling a theory of higher brain function},
+  author={Gerald M. Edelman},
+  year={1982},
+  booktitle={The 4th Intensive Study Program
+Of The Neurosciences Research Program} 
+}
+
+
+@article{hagenbuchner_self-organizing_2003,
+	title = {A self-organizing map for adaptive processing of structured data},
+	volume = {14},
+	issn = {1045-9227},
+	url = {http://ieeexplore.ieee.org/document/1199648/},
+	doi = {10.1109/TNN.2003.810735},
+	abstract = {Recent developments in the area of neural networks produced models capable of dealing with structured data. Here, we propose the first fully unsupervised model, namely an extension of traditional self-organizing maps (SOMs), for the processing of labeled directed acyclic graphs (DAGs). The extension is obtained by using the unfolding procedure adopted in recurrent and recursive neural networks, with the replicated neurons in the unfolded network comprising of a full SOM. This approach enables the discovery of similarities among objects including vectors consisting of numerical data. The capabilities of the model are analyzed in detail by utilizing a relatively large data set taken from an artificial benchmark problem involving visual patterns encoded as labeled DAGs. The experimental results demonstrate clearly that the proposed model is capable of exploiting both information conveyed in the labels attached to each node of the input DAGs and information encoded in the DAG topology.},
+	language = {en},
+	number = {3},
+	urldate = {2018-12-10},
+	journal = {IEEE Transactions on Neural Networks},
+	author = {Hagenbuchner, M. and Sperduti, A. and {Ah Chung Tsoi}},
+	month = may,
+	year = {2003},
+	pages = {491--505}
+}
+
+@Article{Kohonen1982,
+author={Kohonen, Teuvo},
+title={Self-organized formation of topologically correct feature maps},
+journal={Biological Cybernetics},
+year={1982},
+volume={43},
+number={1},
+pages={59--69},
+}
+
+@inproceedings{Kohonen1995SelfOrganizingM,
+  title={Self-Organizing Maps},
+  author={Teuvo Kohonen},
+  booktitle={Springer Series in Information Sciences},
+  year={1995}
+}
+
+@incollection{cottrell_theoretical_2016,
+	address = {Cham},
+	title = {Theoretical and {Applied} {Aspects} of the {Self}-{Organizing} {Maps}},
+	volume = {428},
+	isbn = {978-3-319-28517-7 978-3-319-28518-4},
+	abstract = {The Self-Organizing Map (SOM) is widely used, easy to implement, has nice properties for data mining by providing both clustering and visual representation. It acts as an extension of the k-means algorithm that preserves as much as possible the topological structure of the data. However, since its conception, the mathematical study of the SOM remains diﬃcult and has be done only in very special cases. In WSOM 2005, Jean-Claude Fort presented the state of the art, the main remaining diﬃculties and the mathematical tools that can be used to obtain theoretical results on the SOM outcomes. These tools are mainly Markov chains, the theory of Ordinary Diﬀerential Equations, the theory of stability, etc. This article presents theoretical advances made since then. In addition, it reviews some of the many SOM algorithm variants which were deﬁned to overcome the theoretical diﬃculties and/or adapt the algorithm to the processing of complex data such as time series, missing values in the data, nominal data, textual data, etc.},
+	language = {en},
+	urldate = {2018-12-17},
+	booktitle = {Advances in {Self}-{Organizing} {Maps} and {Learning} {Vector} {Quantization}},
+	publisher = {Springer International Publishing},
+	author = {Cottrell, Marie and Olteanu, Madalina and Rossi, Fabrice and Villa-Vialaneix, Nathalie},
+	year = {2016},
+	doi = {10.1007/978-3-319-28518-4_1},
+	pages = {3--26}
+}
+
+
+@article{khacef_brain-inspired_2020,
+	title = {Brain-inspired self-organization with cellular neuromorphic computing for multimodal unsupervised learning},
+	url = {http://arxiv.org/abs/2004.05488},
+	abstract = {Cortical plasticity is one of the main features that enable our capability to learn and adapt in our environment. Indeed, the cerebral cortex has the ability to self-organize itself through two distinct forms of plasticity: the structural plasticity that creates (sprouting) or cuts (pruning) synaptic connections between neurons, and the synaptic plasticity that modiﬁes the synaptic connections strength. These mechanisms are very likely at the basis of an extremely interesting characteristic of the human brain development: the multimodal association. The brain uses spatio-temporal correlations between several modalities to structure the data and create sense from observations. Thus, in spite of the diversity of the sensory modalities, like sight, sound and touch, the brain arrives at the same concepts. Moreover, biological observations show that one modality can activate the internal representation of another modality when both are correlated. To model such a behavior, Edelman and Damasio proposed respectively the Reentry and the Convergence Divergence Zone frameworks where bi-directional neural communications can lead to both multimodal fusion (convergence) and inter-modal activation (divergence). Nevertheless, these frameworks do not provide a computational model at the neuron level, and only few papers tackle this issue of bio-inspired multimodal association which is yet necessary for a complete representation of the environment. In this paper, we build a brain-inspired neural system based on the Reentry principles, using Self-Organizing Maps and Hebbian-like learning. We propose and compare different computational methods for unsupervised learning and inference, then quantify the gain of both convergence and divergence mechanisms in a multimodal classiﬁcation task. The divergence mechanism is used to label one modality based on the other, while the convergence mechanism is used to improve the overall accuracy of the system. We perform our experiments on a constructed written/spoken digits database and a DVS/EMG hand gestures database. Finally, we implement our system on the Iterative Grid, a cellular neuromorphic architecture that enables distributed computing with local connectivity. We show the gain of the so-called hardware plasticity induced by our model, where the system’s topology is not ﬁxed by the user but learned along the system’s experience through self-organization.},
+	language = {en},
+	urldate = {2020-08-31},
+	journal = {arXiv:2004.05488 [cs, q-bio]},
+	author = {Khacef, Lyes and Rodriguez, Laurent and Miramond, Benoit},
+	month = jun,
+	year = {2020},
+	note = {arXiv: 2004.05488},
+	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Quantitative Biology - Neurons and Cognition},
+	annote = {Comment: Preprint, 24 pages, 11 figures, 4 tables},
+	file = {Khacef et al. - 2020 - Brain-inspired self-organization with cellular neu.pdf:/home/noemie/Zotero/storage/TS8SAMRN/Khacef et al. - 2020 - Brain-inspired self-organization with cellular neu.pdf:application/pdf},
+}
